--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,13 @@
     <input id="tamaño" type="text" placeholder="tamaño" />
     <input id="patas" type="text" placeholder="patas" />
     <button onclick="addProducto()">AÑADIR PRODUCTO</button>
+    <hr>
+    <input id="modificarColor" type="text" placeholder="color" />
+    <button onclick="modificarColor()">MODIFICAR COLOR</button>
+    <hr>
+    <input id="borrar" type="text" placeholder="patas" />
+    <button onclick="borrar()">BORRAR MESA</button>
+    <hr>
     <div id="resultado"></div>
     <script src="./index.js"></script>
 </body>
